kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-apps
  labels:
    name: k8s-apps
