kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: internal-app-service
  name: internal-app-service
#  namespace: k8s-apps
spec:
  ports:
    - name: hello-port
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: internal-app
  type: ClusterIP
