kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-apps-ingress
  namespace: k8s-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: hello.127.0.0.1.nip.io
      http:
        paths:
          - path: /hello
            pathType: Exact
            backend:
              service:
                name: internal-app-service
                port:
                  number: 8081
# Nip.io is a DNS service that simplifies local testing of applications by providing a way to create domain names that map to specific IP addresses.
